# yast-scanner

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  Makefile.am  README  README.md  README_skeleton  RPMNAME  configure.in  configure.in.in  yast2-config-scanner.spec.in  yast2-scanner.spec.in
.github/workflows/: ci.yml
conf/: Makefile.am  cfg_scanner.scr  sane.scr  scanner.scr
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-config-scanner.changes  yast2-scanner.changes  yast2-scanner.spec
scanner/: RPMNAME  yast2-scanner.spec.in
scanner/doc/: Makefile.am
scanner/package/: yast2-scanner.changes
scanner/src/: Makefile.am  Scanner.ycp  dialogs.ycp  helps.ycp  scanner.ycp  wizards.ycp
scanner/tools/: Makefile.am  activate_scanner_backend  autodetect_scanners  create_scanner_database  deactivate_scanner_backend  determine_active_scanner_backends  determine_active_scanners  determine_network_scanner_config  setup_hplip_scanner_service  setup_ptal_scanner_service
src/: .cvsignore  Makefile.am  Scanner.ycp  ag_sane  ag_scanner  dialogs.ycp  get_configured_scanner  get_scsi_scanner  helps.ycp  menuentry_scanner.y2cc  menuentry_scanner.ycp  scanner.desktop  scanner.ycp  scannerDB.pm  scanner_auto.ycp  scanner_driver.ycp  scanner_functions.ycp  scanner_install.ycp  scanner_install_ui.ycp  scanner_manual.ycp  scanner_manual_ui.ycp  scanner_net.ycp  scanner_new.ycp  scanner_new_ui.ycp  scanner_notfound.ycp  scanner_options.ycp  scanner_options_ui.ycp  scanner_overview.ycp  scanner_overview_ui.ycp  scanner_proposal.ycp  scanner_scsi.ycp  scanner_start.ycp  scanner_start_ui.ycp  scanner_usb.ycp  test_actions.pl  test_agsane  test_descparse.pl  test_writedllconf.pl  wizards.ycp
src/clients/: scanner.rb  scanner.ycp
src/desktop/: org.opensuse.yast.Scanner.desktop  scanner.desktop
src/include/scanner/: dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  wizards.rb  wizards.ycp
src/modules/: Scanner.rb
testsuite/: Makefile.am  ag_sane.test  ui_test.ycp
tools/: Makefile.am  activate_scanner_backend  autodetect_scanners  autodetect_scanners.save  create_scanner_database  deactivate_scanner_backend  determine_active_scanner_backends  determine_active_scanners  determine_network_scanner_config  displaytest.c  setup_hplip_scanner_service  setup_network_scanner_config  setup_ptal_scanner_service  test_and_set_scanner_access_permissions  test_scanner_backend
