# Sources for scanner

module_DATA = \
  modules/Scanner.rb

client_DATA = \
  clients/scanner.rb

yncludedir = @yncludedir@/scanner
ynclude_DATA = \
  include/scanner/wizards.rb \
  include/scanner/dialogs.rb \
  include/scanner/helps.rb

desktop_DATA = \
  desktop/scanner.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common